kubernetes/06 despliegue local/backend1-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend1-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend1-app
  template:
    metadata:
      labels:
        app: backend1-app
    spec:
      containers:
        - name: backend1-container
          image: localhost:5000/backend1-ms
          ports:
            - containerPort: 3010
