kubernetes/06 despliegue local/backend2-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend2-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend2-app
  template:
    metadata:
      labels:
        app: backend2-app
    spec:
      containers:
        - name: backend2-container
          image: localhost:5000/backend2-ms
          ports:
            - containerPort: 3020
