kubernetes/06 despliegue local/backend2-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend2-svc
spec:
  selector:
    app: backend2-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3020
  type: ClusterIP
