kubernetes/06 despliegue local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "ingress-ms07"
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /api/config
            pathType: Prefix
            backend:
              service:
                name: "frontend-svc"
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: "backend1-svc"
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "frontend-svc"
                port:
                  number: 80
